Add a clear button, and fixed sizing

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
             </div>
         </div>
         <div id="basketball-court" class="grid-item">
+            <img src="./img/2basketball_court.jpg">
             <div id="one" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
             <div id="two" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
             <div id="three" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
             <div id="four" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
             <div id="five" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <button id="clear-contents" onclick="removeBoard();">❌ Clear</button>
         </div>
     </div>
 </body>
