Higher res picture, final features added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Basketball Fantasy Team Creator</title>
     <meta name="description" content="A Catalog of basketball players and fantasy team">
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="/faveicon.png">
     <script type="text/javascript" src="scripts.js"></script>
     <script type="text/javascript" src="draganddrop.js"></script>
     <meta charset="UTF-8">
@@ -32,7 +33,7 @@
             </div>
         </div>
         <div id="basketball-court" class="grid-item">
-            <img src="./img/2basketball_court.jpg">
+            <img src="./img/half-court.webp" style="transform: rotate(180deg);">
             <div id="one" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
             <div id="two" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
             <div id="three" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
